--- a/index.html
+++ b/index.html
@@ -2,30 +2,141 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="Shortcut Icon" href="img/log.png" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-    <title>Recetas de la abuela</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+	<link rel="Shortcut Icon" href="img/log.png" />
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
+	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+	<title>Recetas de la abuela</title>
 </head>
 
-<body>
-    <p>Hello World</p>
+<body class="bg-warning">
+	<header class="container-fluid bg-secondary">
+		<nav class="navbar navbar-dark bg-secondary">
+			<a href="index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
 
-    <footer>
-        <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Licencia de Creative Commons"
-                style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Este obra
-        está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">licencia de Creative
-            Commons Reconocimiento-NoComercial 4.0 Internacional</a>.
-    </footer>
+			<div class="text-white display-4 font-italic text-fluid">Recetas de la Abuela</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
-    </script>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
+				aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Inicio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cat/carne/index.html">Carnes</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cat/oriental/index.html">Oriental</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="cat/verdura/index.html">Verduras</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+
+	<div>
+		<div class="container mx-auto">
+			<div class="card border-0 shadow my-5 ">
+				<div class="card-body p-5">
+					<h1 class="font-weight-light text-center">¡BIENVENIDO!</h1>
+					<p class="lead text-center">Esta es la página de las recetas de la abuela, donde encontrarás una
+						gran selección
+						de platos para todos los gustos</p>
+					<p class="lead text-center">¿A qué esperas?</p>
+					<div class="card-fluid">
+						<div class="card-header">
+							<a href="cat/carne/index.html" class="img-fluid">
+								<h3 class="text-center">Carnes</h3>
+							</a>
+						</div>
+						<div class="card-body">
+						<img src="img/Lomoalhorno.jpg" class="img-fluid rounded mx-auto d-block" alt="Lomo">
+						</div>
+						<div class="card-body">
+							<p class="text-center">¿Necesitas proteínas? Entonces este es tu sitio</p>
+						</div>
+						</div>
+					<div class="card-fluid">
+						<div class="card-header">
+							<a href="cat/oriental/index.html" class="img-fluid">
+								<h3 class="text-center">Oriental</h3>
+							</a>
+						</div>
+						<div class="card-body">
+						<img src="img/rollitosdeprimavera.jpg" class="img-fluid rounded mx-auto d-block" alt="Sushi">
+						</div>
+						<div class="card-body">
+							<p class="text-center">¿Ganas de algo más exótico? Mira y descubre nuevos sabores</p>
+						</div>
+						</div>
+					<div class="card-fluid">
+						<div class="card-header">
+							<a href="cat/verdura/index.html" class="img-fluid">
+								<h3 class="text-center">Verduras</h3>
+							</a>
+						</div>
+						<div class="card-body">
+						<img src="img/ensaladadegarbanzos.jpg" class="img-fluid rounded mx-auto d-block" alt="ensalada">
+						</div>
+						<div class="card-body">
+							<p class="text-center">¿Un poco de verde?</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<footer class="bg-secondary">
+			<div class="row container-fluid">
+
+				<div class=" col justify-content-start text-left col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+					<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img
+							alt="Licencia de Creative Commons" style="border-width:0"
+							src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><a
+						class="text-white">Esta obra
+						está bajo una</a><br /><a rel="license"
+						href="http://creativecommons.org/licenses/by-nc/4.0/">licencia de
+						Creative
+						Commons<br /> Reconocimiento-NoComercial 4.0 Internacional</a>
+				</div>
+
+				<div class="col justify-content-center text-center col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+					<h5 class="text-white">AUTORES</h5>
+					<a class="text-white" href="https://moiruz.github.io/">Moisés Cañete</a><br />
+					<a class="text-white" href="https://a19camoan.github.io/">Andrés Castillero</a><br />
+					<a class="text-white" href="https://manuelsolar.github.io/">Manuel Solar</a><br />
+					<a class="text-white" href="https://sergiovj2001.github.io/">Sergio Vera</a><br />
+				</div>
+
+				<div class="col justify-content-end col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+					<div class=float-right>
+						<a href="https://www.facebook.com/rdabuela.abuela.3"><img src="img/facebook.png"
+								alt="Facebook_logo"></a>
+						<a href="https://www.instagram.com/rdabuela/"><img src="img/instagram.png"
+								alt="Intagram_logo"></a>
+						<a href="https://www.pinterest.es/rdladaw2020/"><img src="img/pinterest.png"
+								alt="Pinterest_logo"></a>
+					</div>
+				</div>
+			</div>
+		</footer>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+			integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+		</script>
+	</div>
 </body>
 
 </html>
