--- a/cat/verdura/index.html
+++ b/cat/verdura/index.html
@@ -12,35 +12,35 @@
 
 <body class="bg-warning">
 
-    <header class="container-fluid bg-secondary">
-        <nav class="navbar navbar-dark bg-secondary">
-            <a href="../../index.html"><img src="../../img/logo_cabeza.png" alt="Logo"></a>
+    <header class="container-fluid bg-dark">
+		<nav class="navbar navbar-dark bg-dark">
+			<a href="../../index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
 
-            <div class="text-white display-4 font-italic text-fluid">Recetas de la Abuela</div>
+			<div class="text-success display-4 font-italic text-fluid">Recetas de la Abuela</div>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-                aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../carne/index.html">Carnes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Oriental</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../verdura/index.html">Verduras</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
+				aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+            
+			<div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="#">Inicio</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
     <div>
         <div class="container-fluid">
