Arreglo enlaces de todas las páginas al inicio y añado cosas INDEX

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5 ">
 				<div class="card-body p-5">
-					<h1 class="font-weight-light text-center">¡BIENVENIDO!</h1>
-					<p class="lead text-center">Esta es la página de las recetas de la abuela, donde encontrarás una
-						gran selección
-						de platos para todos los gustos</p>
-					<p class="lead text-center">¿A qué esperas?</p>
+					<h1 class="font-weight-light text-center">Recetas aprobadas por: <br>LA YAYA</h1>
+					<p class="lead text-center">Página acerca de las recetas de la abuela.</p>
+					<p class="lead text-center">¡Prueba lo que quieras!</p>
 					<div class="card-fluid">
 						<div class="card-header">
 							<a href="cat/carne/index.html" class="img-fluid">
