--- a/cat/carne/index.html
+++ b/cat/carne/index.html
@@ -26,7 +26,7 @@
 			<div class="collapse navbar-collapse  navbar-expand-sm" id="navbarsExample01">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="#">Inicio</a>
+						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
