--- a/cat/carne/lomoalhorno.html
+++ b/cat/carne/lomoalhorno.html
@@ -28,7 +28,10 @@
 						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
+						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Flamenquines</a>
+					</li>
+					<li class="nav-item">
+						<a class="text-warning nav-link" href="#">Lomo al Horno |</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
