--- a/cat/oriental/index.html
+++ b/cat/oriental/index.html
@@ -32,7 +32,10 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
+						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Rollitos de Primavera</a>
+					</li>
+                    <li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Tallarines Con Gambas |</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
