--- a/cat/oriental/rollitosdeprimavera.html
+++ b/cat/oriental/rollitosdeprimavera.html
@@ -31,7 +31,10 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
+						<a class="text-warning nav-link" href="#">| Rollitos de Primavera</a>
+					</li>
+                    <li class="nav-item">
+						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Tallarines Con Gambas |</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
