--- a/cat/verdura/tempuradeverduras.html
+++ b/cat/verdura/tempuradeverduras.html
@@ -34,7 +34,10 @@
 						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/index.html">Verduras</a>
+						<a class="text-warning nav-link" href="../verdura/ensaladagarbanzos.html">| Ensalada de Garbanzos</a>
+					</li>
+                    <li class="nav-item">
+						<a class="text-warning nav-link" href="#">Tempura de Verduras |</a>
 					</li>
 				</ul>
 			</div>
