--- a/cat/carne/flamenquinescordobese.html
+++ b/cat/carne/flamenquinescordobese.html
@@ -52,6 +52,7 @@
 				</div>
 				<div>
 					<div class="card-body">
+												<!--Falta Imagen-->
 					<img src="../../img/flamenquines.jpg" alt="Flamenquines" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
