--- a/cat/carne/index.html
+++ b/cat/carne/index.html
@@ -52,6 +52,8 @@
                     <p class="col font-weight-light text-center display-2 card-header p-5">CARNES</p>
 
                     <div class="row">
+                        						<!--Falta Imagen-->
+
                         <a class="col-xs col-md-6" href="flamenquinescordobese.html"><img src="../../img/flamenquines.jpg"
                                 alt="Flamenquines_cordobeses" class="col-12 rounded img-fluid"></a>
                         <div class="row col-xs col-md-6">
@@ -67,6 +69,8 @@
                         </div>
 
                         <p class="col-12"></p>
+
+                        						<!--Falta Imagen-->
 
                         <a class="col-xs col-md-6" href="lomoalhorno.html"><img src="../../img/lomo.jpg" alt="Lomo"
                                 class="col-12 rounded img-fluid"></a>
