--- a/cat/carne/lomoalhorno.html
+++ b/cat/carne/lomoalhorno.html
@@ -52,6 +52,8 @@
 				</div>
 				<div>
 					<div class="card-body">
+												<!--Falta Imagen-->
+
 					<img src="../../img/lomo.jpg" alt="Filetes de lomo" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
