--- a/cat/oriental/index.html
+++ b/cat/oriental/index.html
@@ -52,6 +52,8 @@
                     <p class="col font-weight-light text-center display-2 card-header p-5">ORIENTAL</p>
 
                     <div class="row">
+                        						<!--Falta Imagen-->
+
                         <a class="col-xs col-md-6" href="rollitosdeprimavera.html"><img
                                 src="../../img/rollitosdeprimavera.jpg" alt="Flamenquines_cordobeses"
                                 class="col-12 rounded"></a>
@@ -68,6 +70,7 @@
                         </div>
 
                         <p class="col-12"></p>
+						<!--Falta Imagen-->
 
                         <a class="col-xs col-md-6" href="tallarinescongambas.html"><img
                                 src="../../img/tallarinescongambas.jpg" alt="Lomo" class="col-12 rounded"></a>
