--- a/cat/oriental/tallarinescongambas.html
+++ b/cat/oriental/tallarinescongambas.html
@@ -52,6 +52,7 @@
 				</div>
 				<div>
 					<div class="card-body">
+						<!--Falta Imagen-->
 					<img src="../../img/tallarinescongambas.jpg" alt="Tallarines con gambas" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
