--- a/cat/verdura/ensaladagarbanzos.html
+++ b/cat/verdura/ensaladagarbanzos.html
@@ -52,6 +52,7 @@
 				</div>
 				<div>
 					<div class="card-body">
+						<!--Falta Imagen-->
 					<img src="../../img/ensaladadegarbanzos.jpg" alt="Ensalada de garbanzos y quinoa" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
