--- a/cat/verdura/index.html
+++ b/cat/verdura/index.html
@@ -68,7 +68,7 @@
                         </div>
 
                         <p class="col-12"></p>
-
+                        <!--FALTA IMAGEN-->
                         <a class="col-xs col-md-6" href="tempuradeverduras.html"><img
                                 src="../../img/tempuradeverduras.jpg" alt="Tempura_verduras" class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
@@ -90,7 +90,7 @@
     </div>
     <footer class="bg-secondary">
         <div class="row container-fluid">
-
+<!--FALTA IMAGEN-->
             <div class=" col justify-content-start text-left col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                 <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img
                         alt="Licencia de Creative Commons" style="border-width:0"
