--- a/cat/verdura/tempuradeverduras.html
+++ b/cat/verdura/tempuradeverduras.html
@@ -52,6 +52,7 @@
 				</div>
 				<div>
 					<div class="card-body">
+						<!--FALTA IMAGEN-->
 					<img src="../../img/tempuradeverduras.jpg" alt="Tempura de verduras" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
@@ -87,7 +88,7 @@
 		
 	<footer >
 			<div class="row bg-secondary">
-
+					<!--FALTA IMAGEN-->
 				<div class=" col justify-content-start text-left col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
 							<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img
 									alt="Licencia de Creative Commons" style="border-width:0"
