--- a/cat/oriental/rollitosdeprimavera.html
+++ b/cat/oriental/rollitosdeprimavera.html
@@ -52,6 +52,7 @@
 				</div>
 				<div>
 					<div class="card-body">
+						<!--Falta Imagen-->
 					<img src="../../img/rollitosdeprimavera.jpg" alt="Rollitos de primavera" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
