Revert "Index letras"
This reverts commit 87c0948dc9fb8913bd1ab44bae2851d315396b18.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-dark bg-dark">
 			<a href="index.html"><img src="img/logo_cabeza.png" alt="Logo"></a>
 
-			<div class="text-success display-4 font-weight-bold font-italic text-fluid">Recetas de la Abuela</div>
+			<div class="text-success display-4 font-italic text-fluid">Recetas de la Abuela</div>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
 				aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
